--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
        <main>
             <section id="tutorials">
                 <h2>Tutorials</h2>
-                <!--
-                    Links to your tutorial assignments go here.
-                    When you submit a new tutorial, add a link to it
-                    here (if applicable)
-                -->
+                    <a href="https://ashorgel1111.github.io/cs130-coursework/tutorial03/">Tutorial 3</a>
+                    <br />
+                    <a href="https://google.com">Link to Google</a>
+                    <br />
             </section>
             <section id="homework">
                 <h2>Homework</h2>
