--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
        <main>
             <section id="tutorials">
                 <h2>Tutorials</h2>
-                    <a href="https://ashorgel1111.github.io/cs130-coursework/tutorial03/">Tutorial 3</a>
+                    <a href="https://ashorgel1111.github.io/cs130-coursework/tutorial01/tutorial01/index.html">Tutorial 1</a>
                     <br />
-                    <a href="https://google.com">Link to Google</a>
+                    <a href="https://ashorgel1111.github.io/cs130-coursework/tutorial03/">Tutorial 3</a>
                     <br />
             </section>
             <section id="homework">
                 <h2>Homework</h2>
-                <!--
-                    Links to your Homework assignments go here.
-                    When you submit a new tutorial, add a link to it
-                    here (if applicable)
-                -->
+                    Homework 1:
+                    <ul>
+                        <li><a href="https://ashorgel1111.github.io/cs130-coursework/hw01/01_cssgrid/">01_cssgrid</a></li>
+                        <li><a href="https://ashorgel1111.github.io/cs130-coursework/hw01/02_flexbox/">02_flexbox</a></li>
+                    </ul>
             </section>
             <section id="inspiration">
                 <h2>Design Inspiration</h2>
