--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
             </section>
             <section id="inspiration">
                 <h2>Design Inspiration</h2>
-                <!--
-                    Links to 5-10 websites that inspire you
-                -->
+                    <ol>
+                        <li><a href="https://www.zeit.de/index">Die Zeit</a><li>
+                        <li><a href="https://www.earlymusicamerica.org/">Early Music America</a><li>
+                        <li><a href="https://www.orfium.com/">Orfium</a><li>
+                        <li><a href="https://www.parmarecordings.com/">PARMA Recordings</a><li>
+                        <li><a href="https://www.bachvereniging.nl/en">Netherlands Bach Society</a><li>
+                        <li><a href="https://karosi.org/">Bálint Karosi</a><li>
+                        <li><a href="https://www.thirdcoastbaroque.org/202021-season">Third Coast Baroque</a><li>
+                    </ol>
             </section>
         </main>
    </body>
