--- a/index.html
+++ b/index.html
@@ -20,24 +20,78 @@
                     <br />
             </section>
             <section id="homework">
-                <h2>Homework</h2>
-                    Homework 1:
-                    <ul>
-                        <li><a href="https://ashorgel1111.github.io/cs130-coursework/hw01/01_cssgrid/">01_cssgrid</a></li>
-                        <li><a href="https://ashorgel1111.github.io/cs130-coursework/hw01/02_flexbox/">02_flexbox</a></li>
-                    </ul>
+                <h2>Homework Assignments</h2>
+                    <section class="cards">
+                        <section class="card">
+                            <div>
+                                <h3>Homework 1:</h3>
+                                    <a href="https://ashorgel1111.github.io/cs130-coursework/hw01/01_cssgrid/">01_cssgrid</a>
+                                    <br>
+                                    <a href="https://ashorgel1111.github.io/cs130-coursework/hw01/02_flexbox/">02_flexbox</a>
+                            </div>
+                        </section>
+                    </section>
             </section>
             <section id="inspiration">
                 <h2>Design Inspiration</h2>
-                    <ol>
-                        <li><a href="https://www.zeit.de/index">Die Zeit</a></li>
-                        <li><a href="https://www.earlymusicamerica.org/">Early Music America</a></li>
-                        <li><a href="https://www.orfium.com/">Orfium</a></li>
-                        <li><a href="https://www.parmarecordings.com/">PARMA Recordings</a></li>
-                        <li><a href="https://www.bachvereniging.nl/en">Netherlands Bach Society</a></li>
-                        <li><a href="https://karosi.org/">Bálint Karosi</a></li>
-                        <li><a href="https://www.thirdcoastbaroque.org/202021-season">Third Coast Baroque</a></li>
-                    </ol>
+                    <section class="inspiration-cards">
+                        <section class="inspiration-card">
+                            <div>
+                                <div class="image-div" style="background-image: url('https://is4-ssl.mzstatic.com/image/thumb/Purple114/v4/28/a6/a0/28a6a048-7436-586e-9438-7cb06891e9e6/source/256x256bb.jpg');"></div>
+                                <div class="caption">
+                                    <a href="https://www.zeit.de/index">Die Zeit</a>
+                                </div>
+                            </div>
+                        </section>
+                        <section class="inspiration-card">
+                            <div>
+                                <div class="image-div" style="background-image: url('https://pennywhistleclub.com/group/image/group_image/17/large/_v=023741481674552');"></div>
+                                <div class="caption">
+                                    <a href="https://www.earlymusicamerica.org/">Early Music America</a>
+                                </div>
+                            </div>
+                        </section>
+                        <section class="inspiration-card">
+                            <div>
+                                <div class="image-div" style="background-image: url('https://pbs.twimg.com/profile_images/680572032270995457/d_pXv9bw_400x400.jpg');"></div>
+                                <div class="caption">
+                                    <a href="https://www.orfium.com/">Orfium</a>
+                                </div>
+                            </div>
+                        </section>
+                        <section class="inspiration-card">
+                            <div>
+                                <div class="image-div" style="background-image: url('https://media-exp1.licdn.com/dms/image/C4D0BAQEga-xmOKZjXA/company-logo_200_200/0/1610749757781?e=2159024400&v=beta&t=u89AyGs80iMUtbcl4TfvB-Y-gdkQI0qiEt-h1kyTveo');"></div>
+                                <div class="caption">
+                                    <a href="https://www.parmarecordings.com/">PARMA Recordings</a>
+                                </div>
+                            </div>
+                        </section>
+                        <section class="inspiration-card">
+                            <div>
+                                <div class="image-div" style="background-image: url('https://pbs.twimg.com/profile_images/593378416419807232/b8Q_HETJ_400x400.jpg');"></div>
+                                <div class="caption">
+                                    <a href="https://www.bachvereniging.nl/en">Netherlands Bach Society</a>
+                                </div>
+                            </div>
+                        </section>
+                        <section class="inspiration-card">
+                            <div>
+                                <div class="image-div" style="background-image: url('https://external-preview.redd.it/RbgzFhLQxMpONdlLD3qWbckq7p6Ie8Jl39NmrNzjJjc.jpg?auto=webp&s=e7d9bd5d67389c268738fccbabd3518ae59ea32c');"></div>
+                                <div class="caption">
+                                    <a href="https://karosi.org/">Bálint Karosi</a>
+                                </div>
+                            </div>
+                        </section>
+                        <section class="inspiration-card">
+                            <div>
+                                <div class="image-div" style="background-image: url('https://livinghistoryvw.com/event/image/event_image/2110/large/crop=auto/_v=e31151599859764');"></div>
+                                <div class="caption">
+                                    <a href="https://www.thirdcoastbaroque.org/202021-season">Third Coast Baroque</a>
+                                </div>
+                            </div>
+                        </section>
+                    </section>
             </section>
         </main>
    </body>
