--- a/index.html
+++ b/index.html
@@ -21,16 +21,24 @@
             </section>
             <section id="homework">
                 <h2>Homework Assignments</h2>
-                    <section class="cards">
-                        <section class="card">
+                    <div class="cards">
+                        <div class="card hw01">
                             <div>
                                 <h3>Homework 1:</h3>
+                                    <p>
                                     <a href="https://ashorgel1111.github.io/cs130-coursework/hw01/01_cssgrid/">01_cssgrid</a>
                                     <br>
                                     <a href="https://ashorgel1111.github.io/cs130-coursework/hw01/02_flexbox/">02_flexbox</a>
+                                    </p>
                             </div>
-                        </section>
-                    </section>
+                        </div>
+                        <div class="card hw02">
+                            <div>
+                                <h3>Homework 2:</h3>
+                                    <p>Nothing here yet...</p>
+                            </div>
+                        </div>
+                    </div>
             </section>
             <section id="inspiration">
                 <h2>Design Inspiration</h2>
