--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <div class="card hw02">
                             <div>
                                 <h3>Homework 2:</h3>
-                                    <p>Nothing here yet...</p>
+                                    <a href="https://ashorgel1111.github.io/cs130-coursework/hw02/">hw02 files</a>
                             </div>
                         </div>
                     </div>
