Updating GitHub Pages

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
                     <br />
                     <a href="https://ashorgel1111.github.io/cs130-coursework/tutorial03/">Tutorial 3</a>
                     <br />
+                    <p>Tutorial 5<p>
+                    <ul>
+                      <li><a href="https://ashorgel1111.github.io/cs130-coursework/tutorial05/font-switcher/">Font Switcher</a></li>
+                      <li><a href="https://ashorgel1111.github.io/cs130-coursework/tutorial05/page-turner/">Page Turner</a></li>
+                      <li><a href="https://ashorgel1111.github.io/cs130-coursework/tutorial05/theme-switcher/">Theme Switcher</a></li>
+                    <ul>
             </section>
             <section id="homework">
                 <h2>Homework Assignments</h2>
