Adding tutorial06 to the repo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                       <li><a href="https://ashorgel1111.github.io/cs130-coursework/tutorial05/font-switcher/">Font Switcher</a></li>
                       <li><a href="https://ashorgel1111.github.io/cs130-coursework/tutorial05/page-turner/">Page Turner</a></li>
                       <li><a href="https://ashorgel1111.github.io/cs130-coursework/tutorial05/theme-switcher/">Theme Switcher</a></li>
-                    <ul>
+                    </ul>
+                    <a href="https://ashorgel1111.github.io/cs130-coursework/tutorial06/">Tutorial 6</a>
             </section>
             <section id="homework">
                 <h2>Homework Assignments</h2>
