--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
                                     <a href="https://ashorgel1111.github.io/cs130-coursework/hw02/">hw02 files</a>
                             </div>
                         </div>
+                        <div class="card hw03">
+                            <div>
+                                <h3>Homework 3:</h3>
+                                    <p>
+                                    <a href="https://ashorgel1111.github.io/cs130-coursework/hw01/01_cssgrid/">01_cssgrid</a>
+                                    </p>
+                            </div>
+                        </div>
                     </div>
             </section>
             <section id="inspiration">
