Amending Homepage AGAIN

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <div>
                                 <h3>Homework 3:</h3>
                                     <p>
-                                    <a href="https://ashorgel1111.github.io/cs130-coursework/hw01/01_cssgrid/">01_cssgrid</a>
+                                    <a href="https://ashorgel1111.github.io/cs130-coursework/hw03/">Photo Carousel</a>
                                     </p>
                             </div>
                         </div>
