--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
                                     </p>
                             </div>
                         </div>
+                        <div class="card hw04">
+                            <div>
+                                <h3>Homework 4:</h3>
+                                    <p>
+                                    <a href="https://ashorgel1111.github.io/cs130-coursework/hw04/your_task/index.html">Tutorial 7</a>
+                                    </p>
+                            </div>
+                        </div>
                     </div>
             </section>
             <section id="inspiration">
