--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
                                     </p>
                             </div>
                         </div>
+                        <div class="card project">
+                            <div>
+                                <h3>Project:</h3>
+                                    <p>
+                                    <a href="https://ashorgel1111.github.io/cs130-coursework/project/index.html">Homepage</a>
+                                    </p>
+                            </div>
+                        </div>
                     </div>
             </section>
             <section id="inspiration">
