Adding Spotify Player

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <div>
                                 <h3>Homework 4:</h3>
                                     <p>
-                                    <a href="https://ashorgel1111.github.io/cs130-coursework/hw04/your_task/index.html">Tutorial 7</a>
+                                    <a href="https://ashorgel1111.github.io/cs130-coursework/hw04/your_task/index.html">Spotify Player</a>
                                     </p>
                             </div>
                         </div>
