--- a/hw04/your_task/index.html
+++ b/hw04/your_task/index.html
@@ -19,9 +19,9 @@
         <main>
             <header>
                 <i class="fas fa-search"></i>
-                <input type="search" 
-                    placeholder="Search for Artists or Songs" 
-                    id="search" 
+                <input type="search"
+                    placeholder="Search for Artists or Songs"
+                    id="search"
                     value="" />
             </header>
             <article id="featured-content">
@@ -39,9 +39,9 @@
                 </section>
             </article>
         </main>
-        
+
         <footer>
-            <div class="track-item">
+            <div class="track-item preview" id="preview-box">
                 <!-- to be populated from data -->
             </div>
             <div class="player">
