Second Project Deliverable

--- a/project/index.html
+++ b/project/index.html
@@ -5,13 +5,13 @@
   </head>
   <body>
     <header id='titles'>
-      <p>Alexander Hamilton</p>
-      <p>Organist | Composer | Improvisor | Music Theorist</p>
+      <h1>Alexander Hamilton</h1>
+      <pre>Organist      |      Composer      |      Improvisor      |      Music Theorist</pre>
     </header>
     <main>
       <header id='welcome'>
         <p>Hi there! I am an organist graduating in June 2021 from Northwestern University with a Bachelor of Music (music theory).
-        My research interests include investigating the improvisational practices of seventeenth-century organists,
+        My research interests include investigating the improvisational practices of 17th-century organists,
         with an emphasis on the applications of chromaticism,
         and probing the cultural role of Baroque organs and organ music in 21st-century Germany.
         I compose organ, chamber, and vocal works deriving from the styles pioneered by such composers as
@@ -20,22 +20,26 @@
         copywriting, arts administration, and recording.</p>
       </header>
       <section>
-        <p>Section Tag: this will stretch across the screen and contain a photo carousel</p>
-        <div>
-          <p>Div Tag: this will contain the photo carousel</p>
+        <div id='carousel'>
+          <section class="preview_box">
+              <div class="featured_image" style="background-image:url('images/field1.jpg')"></div>
+          </section>
+          <!-- thumbnails -->
+          <ul class="cards"></ul>
         </div>
+        <button class="prev">&lsaquo;</button>
+        <button class="next">&rsaquo;</button>
       </section>
-      <p>***Main Ends Here***</p>
     </main>
     <nav>
-      <p>Nav Tag: Links to other parts of the page</p>
       <a href="about_me\about.html">About Me</a>
       <a href="resume\resume.html">Resume</a>
       <a href="organ_projects\organ_projects.html">Organ Projects</a>
       <a href="other_media\other_media.html">Other Media</a>
     </nav>
     <footer>
-      <p>Footer Tag: contact info, etc. will be placed here</p>
+      <p>Email: <i>ashorgel1111@gmail.com</i></p>
+      <p>Cell: <i>(716)-331-7446</i></p>
     </footer>
     <script type="application/javascript" src="scripts.js"></script>
   </body>
