--- a/project/resume/resume.html
+++ b/project/resume/resume.html
@@ -1,34 +1,27 @@
 <html>
   <head>
     <title>Resumé</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
-      <p>Header Tag: this will contain my name and title/role</p>
+    <header id='titles'>
+      <h1>Alexander Hamilton</h1>
+      <pre>Organist      |      Composer      |      Improvisor      |      Music Theorist</pre>
     </header>
     <main>
-      <p>***Main Begins Here***</p>
-      <h1>Resumé</h1>
       <section>
-        <p>Section Tag: this will contain my resume</p>
-        <iframe>iframe Tag: this will contain the resumé</iframe>
+        <iframe src="Resume.pdf"></iframe>
       </section>
-      <section>
-        <p>Section Tag: this will contain my CV (?)</p>
-        <iframe>iframe Tag: this will contain the CV</iframe>
-      </section>
-      <p>***Main Ends Here***</p>
     </main>
     <nav>
-      <p>Nav Tag: Links to other parts of the page</p>
       <a href="..\organ_projects\organ_projects.html">Organ Projects</a>
       <a href="..\about_me\about.html">About</a>
       <a href="..\other_media\other_media.html">Other Media</a><br>
       <a href="..\index.html">Home</a>
     </nav>
     <footer>
-      <p>Footer Tag: contact info, etc. will be placed here</p>
+      <p>Email: <i>ashorgel1111@gmail.com</i></p>
+      <p>Cell: <i>(716)-331-7446</i></p>
     </footer>
     <!-- <script type="application/javascript" src="scripts.js"></script> -->
   </body>
