--- a/project/about_me/about.html
+++ b/project/about_me/about.html
@@ -1,37 +1,50 @@
 <html>
   <head>
     <title>About Me</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
-      <p>Header Tag: this will contain my name and title/role</p>
+    <header id='titles'>
+      <h1>Alexander Hamilton</h1>
+      <pre>Organist      |      Composer      |      Improvisor      |      Music Theorist</pre>
     </header>
     <main>
-      <p>***Main Begins Here***</p>
-      <header>
-        <p>Header Tag: This will contain a welcome/introductory information</p>
+      <header id='bio'>
+        <p>Music has never been a straight path for me. However, after picking up the flute, my first instrument, for the first time in fourth grade,
+           I knew that music would somehow be the rabbit hole I'd eventually decide to dive down. Subsequently beginning lessons in piano, teaching
+           myself to play the organ through working as a church organist, and starting to fall in love with composition over the coming couple of
+           years, all while setting my sights on an orchestral flute career, further solidified my immersion and devotion.
+        </p>
+        <p>But juggling all of this at a competent level is enough to make anyone crazy, especially for a perfectionist like me. After facing
+           debilitating muscular problems in my face during my first year at Northwestern University as a flute performance major, I made the hardest
+           but best decision in my musical life to leave my orchestral ambitions behind. Like a forest fire, this left a highly fertile environment
+           for me to begin anew; this time, I plunged into something which light my flame even brighter: Early Music. After rehabilitating my embouchure
+           muscles, I began working with numerous Chicago-based chamber groups as a Baroque flutist. Given more time to pursue keyboard studies, I
+           set my sights on developing my skills as a continuo player, harpsichordist, and organist. This eventually led to a change in major to music
+           theory.
+        </p>
+        <p>In 2019–2020, this all culminated in musical studies in Munich, Germany, with renowned harpsichordist Robert Schröter and a stipend to visit
+           and record on numerous historical pipe organs in Central and North Germany from the 17th and 18th centuries. In March 2020, my residency in
+           Germany was cut short by the COVID-19 pandemic.
+        </p>
+        <p>2020–2021 has been a very productive time for my compositional and improvisational development. Commissioned to write a Baroque-style cantata,
+           it has been a year of intense movement for me in historical music theory research and personal musicianship. With the challenges of the
+           pandemic on the music industry, I turn my sights towards exploring opportunities in arts administration and project managment within music.
+        </p>
       </header>
-      <section>
-        <p>Section Tag: this will stretch across the screen and contain a photo</p>
-        <div>
-          <p>Div Tag: this will contain the photo</p>
-        </div>
+      <section id='image'>
+        <img src='images/Garden.jpg' />
       </section>
-      <section>
-        <p>Section Tag: this will hold my bio</p>
-      </section>
-      <p>***Main Ends Here***</p>
     </main>
     <nav>
-      <p>Nav Tag: Links to other parts of the page</p>
       <a href="..\resume\resume.html">Resume</a>
       <a href="..\organ_projects\organ_projects.html">Organ Projects</a>
       <a href="..\other_media\other_media.html">Other Media</a><br>
       <a href="..\index.html">Home</a>
     </nav>
     <footer>
-      <p>Footer Tag: contact info, etc. will be placed here</p>
+      <p>Email: <i>ashorgel1111@gmail.com</i></p>
+      <p>Cell: <i>(716)-331-7446</i></p>
     </footer>
     <!-- <script type="application/javascript" src="scripts.js"></script> -->
   </body>
