--- a/project/organ_projects/organ_projects.html
+++ b/project/organ_projects/organ_projects.html
@@ -1,46 +1,48 @@
 <html>
   <head>
     <title>Organ Projects</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
-      <p>Header Tag: this will contain my name and title/role</p>
+    <header id='titles'>
+      <h1>Alexander Hamilton</h1>
+      <pre>Organist      |      Composer      |      Improvisor      |      Music Theorist</pre>
     </header>
     <main>
-      <p>***Main Begins Here***</p>
-      <header>
-        <p>Header Tag: this will contain background about the Germany project</p>
-      </header>
-      <section>
-        <p>Section Tag: this will stretch across the screen and contain a photo carousel div tag</p>
-        <div>
-          <p>Div Tag: this will contain the photo carousel</p>
-          <div>
-            <p>Div Tag: this is the first card; it will contain other media (audio/video, picture or two, summary, link to city, etc.)</p>
-          </div>
-          <div>
-            <p>Div Tag: this is the second card; it will contain other media (audio/video, picture or two, summary, link to city, etc.)</p>
+      <section id='germany'>
+        <header>
+          <p>Header Tag: this will contain background about the Germany project</p>
+        </header>
+        <div id='germany-display'>
+          <div class='card'>
+            <h1 'name'>City Name</h1>
+            <p class='summary'>Summary of city...<br>
+              <a href='#'>Link to city information</a>
+            </p>
+            <div class='images'>
+              <p>Div Tag: contains small photo carousel of two or three pictures<p>
+            </div>
+            <iframe class='media' src='#'></iframe>
           </div>
         </div>
       </section>
-      <section>
-        <p>Section Tag: this will hold info about my COVID-19 Christmas project</p>
-        <p>Paragraph Tag: short summary of project</p>
-        <iframe>iframe Tag: embeded first video in series</iframe><br>
+      <section id='buffalo'>
+        <p>Paragraph Tag: short summary of Christmas project</p>
+        <iframe class='playlist' src="https://www.youtube.com/embed/videoseries?list=PLvax9UiOBEEqyV7bfRfeZ3IX_6Gx99-Ta">
+          iframe Tag: embeded first video in series
+        </iframe><br>
         <a href='#'>a Tag: link to playlist concert</a>
       </section>
-      <p>***Main Ends Here***</p>
     </main>
     <nav>
-      <p>Nav Tag: Links to other parts of the page</p>
       <a href="..\resume\resume.html">Resume</a>
       <a href="..\about_me\about.html">About</a>
       <a href="..\other_media\other_media.html">Other Media</a><br>
       <a href="..\index.html">Home</a>
     </nav>
     <footer>
-      <p>Footer Tag: contact info, etc. will be placed here</p>
+      <p>Email: <i>ashorgel1111@gmail.com</i></p>
+      <p>Cell: <i>(716)-331-7446</i></p>
     </footer>
     <!-- <script type="application/javascript" src="scripts.js"></script> -->
   </body>
