--- a/project/other_media/other_media.html
+++ b/project/other_media/other_media.html
@@ -1,14 +1,14 @@
 <html>
   <head>
     <title>Other Media</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
-      <p>Header Tag: this will contain my name and title/role</p>
+    <header id='titles'>
+      <h1>Alexander Hamilton</h1>
+      <pre>Organist      |      Composer      |      Improvisor      |      Music Theorist</pre>
     </header>
     <main>
-      <p>***Main Begins Here***</p>
       <h1>Organist at Northwestern University</h1>
       <section>
         <p>Section Tag: this will contain videos/recordings of performances at NU</p>
@@ -17,18 +17,17 @@
       <section>
         <p>Section Tag: will contain other media (maybe?)</p>
       </section>
-      <p>***Main Ends Here***</p>
     </main>
     <nav>
-      <p>Nav Tag: Links to other parts of the page</p>
       <a href="..\resume\resume.html">Resume</a>
       <a href="..\about_me\about.html">About</a>
       <a href="..\organ_projects\organ_projects.html">Organ Projects</a><br>
       <a href="..\index.html">Home</a>
     </nav>
     <footer>
-      <p>Footer Tag: contact info, etc. will be placed here</p>
+      <p>Email: <i>ashorgel1111@gmail.com</i></p>
+      <p>Cell: <i>(716)-331-7446</i></p>
     </footer>
-    <!-- <script type="application/javascript" src="scripts.js"></script> -->
+    <script type="application/javascript" src="scripts.js"></script>
   </body>
 </html>
