Final Project Deliverable

--- a/project/index.html
+++ b/project/index.html
@@ -22,9 +22,8 @@
       <section>
         <div id='carousel'>
           <section class="preview_box">
-              <div class="featured_image" style="background-image:url('images/field1.jpg')"></div>
+              <div class="featured_image" style="background-image:url('images/IMG_0638.JPG')"></div>
           </section>
-          <!-- thumbnails -->
           <ul class="cards"></ul>
         </div>
         <button class="prev">&lsaquo;</button>
