--- a/project/other_media/other_media.html
+++ b/project/other_media/other_media.html
@@ -9,13 +9,32 @@
       <pre>Organist      |      Composer      |      Improvisor      |      Music Theorist</pre>
     </header>
     <main>
-      <h1>Organist at Northwestern University</h1>
-      <section>
-        <p>Section Tag: this will contain videos/recordings of performances at NU</p>
+      <h1 id='organ-heading'>Organist at Northwestern University</h1>
+      <section id='organ-videos'>
+        <div class='organ-piece' id='video_1'>
+          <h2><b>Johann Sebastian Bach</b> <br> "Komm heiliger Geist" (BWV 651)</h2>
+          <iframe src="https://drive.google.com/file/d/1Q6tjQOBEHb3xj-SnrHeOtQHpO33UyE4c/preview"></iframe>
+        </div>
+        <div class='organ-piece' id='video_2'>
+          <h2><b>Georg Friedrich Kauffmann</b> <br> Two Settings of "Komm heiliger Geist" <br> from the <i>Harmonische Seelenlust</i></h2>
+          <iframe src="https://drive.google.com/file/d/1TBavFFJk-WjuDDe6qcQrTJphugqSKXHs/preview"></iframe>
+        </div>
+        <div class='organ-piece' id='video_3'>
+          <h2><b>Matthias Weckmann</b> <br> Postlude on "Komm heiliger Geist"</h2>
+          <iframe src="https://drive.google.com/file/d/1atpk3Or1h4xxeRc0T5tfq7LIthM1VNNy/preview"></iframe>
+        </div>
       </section>
-      <h1>Other media...</h1>
-      <section>
-        <p>Section Tag: will contain other media (maybe?)</p>
+      <section id='sketches'>
+        <h1>2021 in Sketches</h1>
+        <p>Enjoy a peek at my personal sketchbook!</p>
+          <div id='carousel-container'>
+            <div id='carousel'>
+              <section class="preview_box">
+                  <div class="featured_image" style="background-image:url('sketchbook_images/portrait.jpg')"></div>
+              </section>
+              <ul class="cards"></ul>
+            </div>
+          </div>
       </section>
     </main>
     <nav>
@@ -28,6 +47,6 @@
       <p>Email: <i>ashorgel1111@gmail.com</i></p>
       <p>Cell: <i>(716)-331-7446</i></p>
     </footer>
-    <script type="application/javascript" src="scripts.js"></script>
+    <script type="application/javascript" src="script.js"></script>
   </body>
 </html>
